bugfix: link not showing after submitting

--- a/src/Pages/SingleQuizPage/styles.css
+++ b/src/Pages/SingleQuizPage/styles.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
+  width: 100%;
   padding: 30px;
   background-color: #f5f5f5;
 }
